@@ -583,3 +583,5 @@ verilog/parser_sv.v:274: INSTANT  'h' 'inst_h' ''
 verilog/parser_sv.v:274: PIN  'push' 'x_if.pop' '1'
 verilog/parser_sv.v:274: ENDCELL  ''
 verilog/parser_sv.v:275: ENDMODULE  'endmodule'
+verilog/parser_sv.v:277: MODULE  'module' 'bugas' undef '0'
+verilog/parser_sv.v:281: ENDMODULE  'endmodule'
